force-app/main/default/objects/User/fields/Accounting_Category__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Category__c</fullName>
    <label>Accounting Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Strategic</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Disti/Consumer</fullName>
            </value>
            <value>
                <fullName>Ex Employee</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Nationals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>VAR-ISR</fullName>
            </value>
            <value>
                <fullName>VAR-TM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>