force-app/main/default/objects/User/fields/Apex_Test__c.field-meta.xml
<CustomField>
    <fullName>Apex_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Test</label>
    <type>Checkbox</type>
</CustomField>