force-app/main/default/objects/User/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <defaultValue>$User.ContactId</defaultValue>
    <label>Contact ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>