force-app/main/default/objects/User/fields/CountryCheck__c.field-meta.xml
<CustomField>
    <fullName>CountryCheck__c</fullName>
    <formula>if(Country =&apos;United States&apos;, true,
if(Country =&apos;Canada&apos;, true,
false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountryCheck</label>
    <type>Checkbox</type>
</CustomField>