force-app/main/default/objects/User/fields/CreatedTimeDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedTimeDate__c</fullName>
    <description>This is set for Time Workflow events so that permission sets, custom settings, and other set up objects insertions can take place in a timely manner without using @ future and apex classes.</description>
    <formula>NOW() - (59/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedTimeDate</label>
    <type>DateTime</type>
</CustomField>