force-app/main/default/objects/User/fields/Dashboard_Group__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Group__c</fullName>
    <description>Group that user belongs to for dashboards on salesforce</description>
    <label>Dashboard Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dashboard_Group</valueSetName>
    </valueSet>
</CustomField>