force-app/main/default/objects/User/fields/Distribution_Partner__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribution Partner</label>
    <type>Checkbox</type>
</CustomField>