force-app/main/default/objects/User/fields/Distributor_Rep__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rep__c</fullName>
    <label>Distributor Sales Rep</label>
    <relationshipName>DistributorSalesRep</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>