force-app/main/default/objects/User/fields/Email_as_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_as_External_ID__c</fullName>
    <description>Used for data loading</description>
    <externalId>true</externalId>
    <label>Email as External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>