force-app/main/default/objects/User/fields/eSPA_Approver__c.field-meta.xml
<CustomField>
    <fullName>eSPA_Approver__c</fullName>
    <inlineHelpText>With the current eSPA approval process, the eSPA approver must be set to the ViewSonic IT User.</inlineHelpText>
    <label>eSPA Approver</label>
    <relationshipName>eSPA_Submitters</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>