force-app/main/default/objects/User/fields/Eval_Report__c.field-meta.xml
<CustomField>
    <fullName>Eval_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://viewsonic.lightning.force.com/lightning/r/Report/00O12000005mE9qEAE/view?fv1=&apos;&amp;FirstName&amp;&apos; &apos;&amp;LastName,&apos;Outstanding Due Eval Report&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eval Report</label>
    <type>Text</type>
</CustomField>