force-app/main/default/objects/User/fields/Eval_Special_Approval__c.field-meta.xml
<CustomField>
    <fullName>Eval_Special_Approval__c</fullName>
    <label>Eval Special Approval</label>
    <relationshipName>Eval_Special_Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>