force-app/main/default/objects/User/fields/Eval_Write_Off_Approver__c.field-meta.xml
<CustomField>
    <fullName>Eval_Write_Off_Approver__c</fullName>
    <label>Eval Write Off Approver</label>
    <relationshipName>Write_Off_Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>