force-app/main/default/objects/User/fields/Evaluation_Past_Due_Limit__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Past_Due_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation Past Due Limit</label>
    <type>Checkbox</type>
</CustomField>