force-app/main/default/objects/User/fields/Evaluations_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Evaluations_Past_Due__c</fullName>
    <label>Evaluations Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>