force-app/main/default/objects/User/fields/External_Partner__c.field-meta.xml
<CustomField>
    <fullName>External_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Partner</label>
    <type>Checkbox</type>
</CustomField>