force-app/main/default/objects/User/fields/FinchLegacyUser__c.field-meta.xml
<CustomField>
    <fullName>FinchLegacyUser__c</fullName>
    <formula>not(isblank( Contact.finchClubLegacyId__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinchLegacyUser</label>
    <type>Checkbox</type>
</CustomField>