force-app/main/default/objects/User/fields/isLegacyPartner__c.field-meta.xml
<CustomField>
    <fullName>isLegacyPartner__c</fullName>
    <formula>not(isblank(Contact.finchClubLegacyId__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLegacyPartner</label>
    <type>Checkbox</type>
</CustomField>