force-app/main/default/objects/User/fields/LastLogin__c.field-meta.xml
<CustomField>
    <fullName>LastLogin__c</fullName>
    <label>LastLogin</label>
    <type>DateTime</type>
</CustomField>