force-app/main/default/objects/User/fields/LoginFlow_DemoUpdate__c.field-meta.xml
<CustomField>
    <fullName>LoginFlow_DemoUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoginFlow_DemoUpdate</label>
    <type>Checkbox</type>
</CustomField>