force-app/main/default/objects/User/fields/Manager_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Manager_Current_User__c</fullName>
    <formula>if( Manager.FirstName &amp;&quot; &quot;&amp;Manager.LastName=  $User.FirstName&amp;&quot; &quot;&amp; $User.LastName, true,
if( Manager.Manager.FirstName &amp;&quot; &quot;&amp;Manager.Manager.LastName=  $User.FirstName&amp;&quot; &quot;&amp; $User.LastName, true,
if( Manager.Manager.Manager.FirstName &amp;&quot; &quot;&amp;Manager.Manager.Manager.LastName=  $User.FirstName&amp;&quot; &quot;&amp; $User.LastName, true,
if( Manager.Manager.Manager.Manager.FirstName &amp;&quot; &quot;&amp;Manager.Manager.Manager.Manager.LastName=  $User.FirstName&amp;&quot; &quot;&amp; $User.LastName, true,
 false))))</formula>
    <label>Manager = Current User</label>
    <type>Checkbox</type>
</CustomField>