force-app/main/default/objects/User/fields/Manager_Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager_Manager__c</fullName>
    <description>get multiple managers in heirarchy</description>
    <formula>Manager.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager.Manager</label>
    <type>Text</type>
</CustomField>