force-app/main/default/objects/User/fields/Manager_Region__c.field-meta.xml
<CustomField>
    <fullName>Manager_Region__c</fullName>
    <label>Manager Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>