force-app/main/default/objects/User/fields/My_Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>My_Email_Signature__c</fullName>
    <description>This is a Rich Text Field that allows users to paste in their custom Email signature for use in HTML Email templates</description>
    <inlineHelpText>Copy and paste your email signature here.  This will make it available for custom email templates.</inlineHelpText>
    <label>My Email Signature</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>