force-app/main/default/objects/User/fields/National_Accounts__c.field-meta.xml
<CustomField>
    <fullName>National_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Accounts</label>
    <type>Checkbox</type>
</CustomField>