force-app/main/default/objects/User/fields/newPartnerWelcomeEmail__c.field-meta.xml
<CustomField>
    <fullName>newPartnerWelcomeEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>newPartnerWelcomeEmail</label>
    <type>Checkbox</type>
</CustomField>