force-app/main/default/objects/User/fields/onboardingIncomplete__c.field-meta.xml
<CustomField>
    <fullName>onboardingIncomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is set for false by default. It will be set true for portal partner community users when they first are set up as users.</description>
    <label>onboardingIncomplete</label>
    <type>Checkbox</type>
</CustomField>