force-app/main/default/objects/User/fields/Oracle_Sales_Name__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Sales_Name__c</fullName>
    <description>used in analytics to compare oracle data when the sales name differs such as case</description>
    <label>Oracle Sales Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>