force-app/main/default/objects/User/fields/Partner_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Type__c</fullName>
    <formula>text(Contact.Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account Type</label>
    <type>Text</type>
</CustomField>