force-app/main/default/objects/User/fields/PartnerAcctParentId__c.field-meta.xml
<CustomField>
    <fullName>PartnerAcctParentId__c</fullName>
    <formula>Contact.Account.Parent.ParentID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PartnerAcctParentId</label>
    <type>Text</type>
</CustomField>