force-app/main/default/objects/User/fields/PartnerDistiEmail__c.field-meta.xml
<CustomField>
    <fullName>PartnerDistiEmail__c</fullName>
    <formula>Distributor_Rep__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Disti Email</label>
    <type>Text</type>
</CustomField>