force-app/main/default/objects/User/fields/PartnerDistiName__c.field-meta.xml
<CustomField>
    <fullName>PartnerDistiName__c</fullName>
    <formula>Distributor_Rep__r.FirstName &amp;&apos; &apos;&amp;  Distributor_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Disti Name</label>
    <type>Text</type>
</CustomField>