force-app/main/default/objects/User/fields/PartnerDistiPhone__c.field-meta.xml
<CustomField>
    <fullName>PartnerDistiPhone__c</fullName>
    <formula>Distributor_Rep__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Disti Phone</label>
    <type>Text</type>
</CustomField>