force-app/main/default/objects/User/fields/PlanViewCal__All_In_One_Calendar_User__c.field-meta.xml
<CustomField>
    <fullName>PlanViewCal__All_In_One_Calendar_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All In One Calendar User</label>
    <type>Checkbox</type>
</CustomField>