force-app/main/default/objects/User/fields/PosSecurity__c.field-meta.xml
<CustomField>
    <fullName>PosSecurity__c</fullName>
    <label>PosSecurity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>