force-app/main/default/objects/User/fields/pp_AV_Spiff_SalesRep__c.field-meta.xml
<CustomField>
    <fullName>pp_AV_Spiff_SalesRep__c</fullName>
    <formula>text(Contact.Account.Spiff_Type__c ) == &apos;Sales Rep&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pp AV Spiff SalesRep</label>
    <type>Checkbox</type>
</CustomField>