force-app/main/default/objects/User/fields/pp_isDistributor__c.field-meta.xml
<CustomField>
    <fullName>pp_isDistributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needed for audiences in the partner portal</description>
    <label>pp isDistributor</label>
    <type>Checkbox</type>
</CustomField>