force-app/main/default/objects/User/fields/pp_NoLogin__c.field-meta.xml
<CustomField>
    <fullName>pp_NoLogin__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Partner Program , no login made yet. if true. Registration flow will make this true when creating user.</description>
    <label>pp NoLogin</label>
    <type>Checkbox</type>
</CustomField>