force-app/main/default/objects/User/fields/Profile_Sales__c.field-meta.xml
<CustomField>
    <fullName>Profile_Sales__c</fullName>
    <formula>left(Profile.Name ,5)=&apos;sales&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Sales</label>
    <type>Checkbox</type>
</CustomField>