force-app/main/default/objects/User/fields/Quota_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Quota_Dashboard__c</fullName>
    <label>Quota Dashboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>