force-app/main/default/objects/User/fields/Quota_Name__c.field-meta.xml
<CustomField>
    <fullName>Quota_Name__c</fullName>
    <formula>if(isblank(Quota_Name_Override__c ), FirstName&amp;&apos; &apos;&amp;LastName,Quota_Name_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Name</label>
    <type>Text</type>
</CustomField>