force-app/main/default/objects/User/fields/Quota_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>Quota_Name_Override__c</fullName>
    <description>This overrides the quota name that is used to match quotas..needed when there are more than one owner to an account like CDW or the Quota name has to match the assigned rep</description>
    <label>Quota Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>