force-app/main/default/objects/User/fields/QuotaFields__c.field-meta.xml
<CustomField>
    <fullName>QuotaFields__c</fullName>
    <label>QuotaFields</label>
    <type>TextArea</type>
</CustomField>