force-app/main/default/objects/User/fields/QuotaLabels__c.field-meta.xml
<CustomField>
    <fullName>QuotaLabels__c</fullName>
    <label>QuotaLabels</label>
    <type>TextArea</type>
</CustomField>