force-app/main/default/objects/User/fields/RBM_Territory__c.field-meta.xml
<CustomField>
    <fullName>RBM_Territory__c</fullName>
    <description>Territory is used for validation rules, could be used for assignment rules, and field updates</description>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Argentina/Brazil/Paraguay/Uruguay</fullName>
            </value>
            <value>
                <fullName>B - Marit</fullName>
            </value>
            <value>
                <fullName>-- CANADA --</fullName>
            </value>
            <value>
                <fullName>Caribbean/Central America</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Colombia/Ecuador/Venezuela</fullName>
            </value>
            <value>
                <fullName>C - Que</fullName>
            </value>
            <value>
                <fullName>D - Fed</fullName>
            </value>
            <value>
                <fullName>E - Ont</fullName>
            </value>
            <value>
                <fullName>G - West</fullName>
            </value>
            <value>
                <fullName>H - BC</fullName>
            </value>
            <value>
                <fullName>-- LATIN AMERICA --</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>MidAtlantic</fullName>
            </value>
            <value>
                <fullName>MidLakes</fullName>
            </value>
            <value>
                <fullName>NorthEast</fullName>
            </value>
            <value>
                <fullName>NorthWest</fullName>
            </value>
            <value>
                <fullName>Peru/Bolivia</fullName>
            </value>
            <value>
                <fullName>SouthCentral</fullName>
            </value>
            <value>
                <fullName>SouthEast</fullName>
            </value>
            <value>
                <fullName>SouthWest</fullName>
            </value>
            <value>
                <fullName>-- US --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>