force-app/main/default/objects/User/fields/Sales_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Category__c</fullName>
    <label>Sales Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RBM</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>Managment</fullName>
            </value>
            <value>
                <fullName>Distributor Partner</fullName>
            </value>
            <value>
                <fullName>Manager/Director</fullName>
            </value>
            <value>
                <fullName>AV Solutions</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Disti</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>