force-app/main/default/objects/User/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <description>For EA to get the sales team</description>
    <label>Sales Team</label>
    <length>222</length>
    <type>Text</type>
</CustomField>