force-app/main/default/objects/User/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <label>SalesTeam Dashboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>