force-app/main/default/objects/User/fields/Send_Welcome_Email_Internal__c.field-meta.xml
<CustomField>
    <fullName>Send_Welcome_Email_Internal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Welcome Email (Internal)</label>
    <type>Checkbox</type>
</CustomField>