force-app/main/default/objects/User/fields/updateDemos__c.field-meta.xml
<CustomField>
    <fullName>updateDemos__c</fullName>
    <formula>isblank( Street) ||
isblank( City) ||
isblank( State) ||
isblank( PostalCode) ||
isblank( Country)|| 
 $User.Alias = &apos;admin&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>updateDemos</label>
    <type>Checkbox</type>
</CustomField>