force-app/main/default/objects/User/fields/UserLicense__c.field-meta.xml
<CustomField>
    <fullName>UserLicense__c</fullName>
    <formula>if(text(UserType) == &apos;PowerPartner&apos;,  
&apos;Partner&apos;,&apos;User&apos;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserLicense</label>
    <type>Text</type>
</CustomField>