force-app/main/default/objects/User/fields/userLicTest__c.field-meta.xml
<CustomField>
    <fullName>userLicTest__c</fullName>
    <formula>text(UserType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>userLicTest</label>
    <type>Text</type>
</CustomField>