force-app/main/default/objects/User/fields/VS_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>VS_Sub_Region__c</fullName>
    <label>VS Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VS_SubRegion</valueSetName>
    </valueSet>
</CustomField>