force-app/main/default/objects/User/fields/VSA_Contact_Created__c.field-meta.xml
<CustomField>
    <fullName>VSA_Contact_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSA Contact Created</label>
    <type>Checkbox</type>
</CustomField>