force-app/main/default/objects/User/fields/WaveName__c.field-meta.xml
<CustomField>
    <fullName>WaveName__c</fullName>
    <description>Field to filter Quota page</description>
    <formula>Case(LastName ,&apos;Henrickson&apos;,&apos;CDW&apos;,&apos;Evans&apos;,&apos;CDW&apos;,FirstName&amp;&apos; &apos;&amp;LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WaveName</label>
    <type>Text</type>
</CustomField>