force-app/main/default/objects/User/validationRules/Country_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_is_Required</fullName>
    <active>false</active>
    <description>Country is required</description>
    <errorConditionFormula>Country=&quot;&quot;</errorConditionFormula>
    <errorMessage>Please enter user&apos;s country</errorMessage>
</ValidationRule>