force-app/main/default/objects/User/validationRules/Country_United_States.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_United_States</fullName>
    <active>false</active>
    <errorConditionFormula>Profile.Name != &apos;Sales - Latin America&apos; &amp;&amp; CountryCheck__c = false &amp;&amp; Apex_Test__c = false &amp;&amp; Profile.Name != &apos;Sales Directors&apos;</errorConditionFormula>
    <errorMessage>Country must be in full name format 

United States, Canada, Mexico...etc.</errorMessage>
</ValidationRule>