force-app/main/default/objects/User/validationRules/New_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Partner</fullName>
    <active>false</active>
    <description>Ensures Partner has a Phone when created</description>
    <errorConditionFormula>OR(AND(CONTAINS(Profile.Name,&quot;Partner&quot;),  Phone = null), AND(CONTAINS(Profile.Name,&quot;Partner&quot;), Email = Null))</errorConditionFormula>
    <errorMessage>Must have Phone Number and Email</errorMessage>
</ValidationRule>