force-app/main/default/objects/User/listViews/Active_Missing_Address.listView-meta.xml
<ListView>
    <fullName>Active_Missing_Address</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ADDRESS_STREET</columns>
    <columns>CORE.USERS.ADDRESS_CITY</columns>
    <columns>CORE.USERS.ADDRESS_STATE</columns>
    <columns>CORE.USERS.ADDRESS_ZIP</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>Sales</value>
    </filters>
    <label>Active Missing Address</label>
    <language>en_US</language>
    <sharedTo>
        <role>SystemAdministrator</role>
        <role>SystemITAdmin</role>
    </sharedTo>
</ListView>