force-app/main/default/objects/User/listViews/Active_Salesforce_Licenses.listView-meta.xml
<ListView>
    <fullName>Active_Salesforce_Licenses</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>chatter,external</value>
    </filters>
    <label>Active Salesforce Licenses</label>
    <language>en_US</language>
    <sharedTo>
        <role>SystemAdministrator</role>
        <role>SystemITAdmin</role>
    </sharedTo>
</ListView>