force-app/main/default/objects/User/listViews/Active_UsersSalesforceLicenses.listView-meta.xml
<ListView>
    <fullName>Active_UsersSalesforceLicenses</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>Contact_ID__c</columns>
    <columns>AccountId__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <label>Active Users Salesforce Licenses</label>
    <language>en_US</language>
    <sharedTo>
        <role>SystemAdministrator</role>
        <role>SystemITAdmin</role>
    </sharedTo>
</ListView>